src/test/deca/context/invalid/operations/unary/invalid_unary_op_minus_bool.deca
// Description:
//    test invalid unary operation MINUS with bool
//    Test rule 3.37
//
// [Begin Result]
//invalid_unary_op_minus_bool.deca:13:10: Unsupported unary operation '-' with type boolean. Type must be int or float. (Rule 3.37)
// [End Result]
//
// Historique:
//    cree le 02/01/2025

{
    print(- true);
}